web/styles/main.less
@import "normalize";
@import "variables";

/* noto-sans-display-500 - latin */
@font-face {
  font-display: swap;
  font-family: "Noto Sans Display";
  font-style: normal;
  font-weight: 500;
  src: url("/fonts/noto-sans-display-v13-latin-500.eot"); /* IE9 Compat Modes */
  src: local(""), url("/fonts/noto-sans-display-v13-latin-500.eot?#iefix") format("embedded-opentype"),
    /* IE6-IE8 */ url("/fonts/noto-sans-display-v13-latin-500.woff2") format("woff2"),
    /* Super Modern Browsers */ url("/fonts/noto-sans-display-v13-latin-500.woff") format("woff"),
    /* Modern Browsers */ url("/fonts/noto-sans-display-v13-latin-500.ttf") format("truetype"),
    /* Safari, Android, iOS */ url("/fonts/noto-sans-display-v13-latin-500.svg#NotoSansDisplay") format("svg"); /* Legacy iOS */
}
/* noto-sans-display-600 - latin */
@font-face {
  font-display: swap;
  font-family: "Noto Sans Display";
  font-style: normal;
  font-weight: 600;
  src: url("/fonts/noto-sans-display-v13-latin-600.eot"); /* IE9 Compat Modes */
  src: local(""), url("/fonts/noto-sans-display-v13-latin-600.eot?#iefix") format("embedded-opentype"),
    /* IE6-IE8 */ url("/fonts/noto-sans-display-v13-latin-600.woff2") format("woff2"),
    /* Super Modern Browsers */ url("/fonts/noto-sans-display-v13-latin-600.woff") format("woff"),
    /* Modern Browsers */ url("/fonts/noto-sans-display-v13-latin-600.ttf") format("truetype"),
    /* Safari, Android, iOS */ url("/fonts/noto-sans-display-v13-latin-600.svg#NotoSansDisplay") format("svg"); /* Legacy iOS */
}

*,
*:before,
*:after {
  color: inherit;
  font-size: inherit;
  font-family: inherit;
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
strong,
b,
figure {
  margin: 0;
}

a,
button {
  color: inherit;
  outline: none;
  text-decoration: none;
}

button,
select {
  cursor: pointer;
}

img,
picture {
  vertical-align: middle;
  max-width: 100%;
}

form,
input,
select,
button,
textarea {
  font: inherit;
  letter-spacing: inherit;

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

  background-color: transparent;
  border: 0;
  outline: none;

  color: inherit;
  padding: 0;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
}

ul,
ol {
  list-style: none;
  padding: 0;
  margin: 0;
}

p {
  margin: 0;
}

svg,
[data-feather] {
  vertical-align: top;
}

svg:not(:first-child),
[data-feather]:not(:first-child),
svg:not(:last-child),
[data-feather]:not(:last-child) {
  margin-top: 0.2rem;
}

svg:first-child:not(:last-child),
[data-feather]:first-child:not(:last-child) {
  margin-right: 0.4rem;
}

svg:last-child:not(:first-child),
[data-feather]:last-child:not(:first-child) {
  margin-left: 0.4rem;
}

svg:first-child:last-child {
  display: block;
  margin: auto;
  height: 100%;
}

[hidden],
.hidden {
  display: none;
}

[data-feather] {
  display: inline-block;
}

h1 {
  @sz: @fs + 0.4rem;
  font-size: @sz;
  line-height: @sz + (@sz*0.25);
  font-weight: 700;
}

h2 {
  @sz: @fs + 0.2rem;
  font-size: @sz;
  line-height: @sz + (@sz*0.25);
  font-weight: 600;
}

h3 {
  font-weight: 600;
}

strong,
h4,
h5,
h6 {
  font-weight: 500;
}

b {
  font-weight: 600;
}

small {
  @sz: @fs - 0.2rem;
  font-size: @sz;
  line-height: @sz + (@sz*0.25);
}

a:hover,
a:active,
a:focus-visible,
button:hover,
button:active,
button:focus-visible {
  color: lighten(@text, 25%);
}

hr {
  border: 0 solid @border;
  border-top-width: 0.25rem;
  margin: @fs 0;

  &:first-child,
  &:last-child {
    display: none;
  }
}

[contenteditable] {
  cursor: text;
  outline: none;
  border: none;
}

html {
  -webkit-tap-highlight-color: transparent;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  font-size: 62.5%;
}

::-webkit-scrollbar {
  background-color: @dark;
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: lighten(@dark, 15%);

  &:hover,
  &:active {
    background-color: lighten(@dark, 20%);
  }
}
/* ... */

